fix align 3.2

--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@ h1 {
     margin-top: 180px;
     font-weight: 900;
     color: rgba(255, 255, 255, 0.534);
-    letter-spacing: 2.5px;
+    letter-spacing: 4px;
     font-family: "Bebas Neue", cursive;
 }
 .fieldSetGrup {
@@ -439,6 +439,7 @@ label {
     .res {
         font-size: 5.5vw;
         margin-left: 3.7vw;
+        letter-spacing: 4px;
     }
     
 }
